<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
      <parent>
        <artifactId>root</artifactId>
        <groupId>com.nova</groupId>
        <version>0.0.1-SNAPSHOT</version>
    </parent> 
  <modelVersion>4.0.0</modelVersion>

    <artifactId>nova</artifactId>
    <packaging>jar</packaging>

  <properties>
  <maven.compiler.source>17</maven.compiler.source>
  <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <build>
    <sourceDirectory>source</sourceDirectory>
    <testSourceDirectory>tests</testSourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>benchmarks</source>
                <source>OtherApproaches</source>
                <source>MemBenchmark</source>                                
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.18.1</version>
          <configuration>
            <argLine>
              --add-modules jdk.incubator.foreign
              --add-opens jdk.incubator.foreign/jdk.internal.foreign=ALL-UNNAMED
              --add-opens java.base/java.nio=ALL-UNNAMED
              --enable-native-access=ALL-UNNAMED
            </argLine>
          </configuration>
        </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
  <dependencies>
<!-- https://mvnrepository.com/artifact/junit/junit -->
	<dependency>
	    <groupId>junit</groupId>
	    <artifactId>junit</artifactId>
	    <version>4.13</version>
	</dependency>

</dependencies>
</project>